# imagefrog

./: pyproject.toml
src/imagefrog/: __main__.py  imagefrog.py
